# platformer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Platformer.sln  README.md  Thumbs.db
Game_001/: ClassDiagram.cd  Game_001.vcxproj  Game_001.vcxproj.filters  animation.h  basic.h  character.cpp  enemy.cpp  engine.cpp  gameOver.cpp  gameOver.h  interface.cpp  interface.h  level.cpp  level.h  main.cpp  menu.cpp  moveable.h  spell.cpp  stable.h  tile.cpp  tile.h  wektor.h
Game_001/Levele/: level_01_ver6.txt  level_02.txt  level_02_ver2.txt
Game_001/SFML/doc/: sfml.chm
Game_001/SFML/doc/html/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  Drawable_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  Glsl_8hpp_source.html  Glyph_8hpp_source.html  Graphics_2Export_8hpp_source.html  Graphics_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  Main_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  NativeActivity_8hpp_source.html  Network_2Export_8hpp_source.html  Network_8hpp_source.html  NonCopyable_8hpp_source.html  (+359 more)
Game_001/SFML/lib/: sfml-audio-d.lib  sfml-audio-s.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics-s.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-system.lib  sfml-window-d.lib  sfml-window-s-d.lib  sfml-window-s.lib  sfml-window.lib
Game_001/SFML/lib/static-std/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s.lib
Game_001/x64/Debug/: vc141.idb
Game_001/x64/Debug/Platformer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Platformer.lastbuildstate
include/: animation.h  basic.h  button.h  character.h  constants.h  enemy.h  engine.h  entity.h  game-over.h  game.h  hero.h  level.h  menu.h  resources.h  spell.h
resources/Levele/: level_01_ver4.txt  level_01_ver5.txt
src/: animation.cpp  button.cpp  character.cpp  character.h  constants.cpp  enemy.cpp  engine.cpp  engine.h  entity.cpp  game-over.cpp  game.cpp  gameOver.cpp  hero.cpp  interface.cpp  level.cpp  main.cpp  menu.cpp  movable.cpp  moveable.cpp  other.cpp  resources.cpp  spell.cpp  stable.cpp  tile.cpp
src/Levele/: level_01_ver3.txt
